adlatus-ci-cd/cd/deploy/base/modules/config-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server-deployment
  namespace: adl
  labels:
    app: config-server
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: config-server:latest
          ports:
            - containerPort: 8080
          # envFrom:
          #  - configMapRef:
          #      name: config-server-config
          #  - secretRef:
          #      name: config-server-secret
