adlatus-ci-cd/cd/deploy/base/modules/config-server/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: config-server-service
  namespace: adl
spec:
  selector:
    app: config-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
